# BDFD.py

./: README.md  bdfdpy.py  botinfo.py  example.py  index.py  pyproject.toml  simplepy.py  test.py
src/BDFD/: bdfd.py
src/example/: botinfo.py  example.py
