[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "bdfd"
version = "0.0.1"
authors = [
  { name="Spit-fires", email="akashfahad12@gmail.com" },
]
description = "A framework to make the usage of discord.py easier"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-or-later license",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Spit-fires/BDFD.py"
"Bug Tracker" = "https://github.com/Spit-fires/BDFD.py/issues"
